--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>شرح تفعيل كارت NFC - egybrain</title>
+  <title>كارت NFC من egybrain</title>
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
@@ -46,6 +46,29 @@
       100% { transform: scale(1); }
     }
 
+    .steps {
+      text-align: right;
+      background-color: #f1f3f6;
+      padding: 25px;
+      border-radius: 10px;
+      margin: 30px 0;
+    }
+
+    .steps h3 {
+      font-size: 24px;
+      margin-bottom: 20px;
+      color: #333;
+    }
+
+    .steps ul {
+      padding-right: 25px;
+    }
+
+    .steps ul li {
+      margin-bottom: 15px;
+      font-size: 18px;
+    }
+
     .price {
       font-size: 30px;
       color: #e74c3c;
@@ -75,9 +98,21 @@
 </head>
 <body>
   <div class="container">
-    <h1>شرح تفعيل كارت NFC من egybrain</h1>
+    <h1>كارت NFC من egybrain</h1>
     <img src="setup_nfc_guide_egybrain.png" alt="شرح إعداد كارت NFC" class="animated-image">
+
+    <div class="steps">
+      <h3>خطوات تفعيل الكارت:</h3>
+      <ul>
+        <li>1. قم بتنزيل تطبيق <a href="http://hihello.me/app" target="_blank">HiHello</a> من App Store أو Google Play.</li>
+        <li>2. أنشئ حسابًا باستخدام بريدك الإلكتروني أو حساب Google أو Apple.</li>
+        <li>3. أضف بياناتك إلى البطاقة الرقمية: الاسم، الوظيفة، الهاتف، البريد، الصورة، الشعار، والروابط.</li>
+        <li>4. استخدم التطبيق لكتابة البيانات على كارت الـNFC.</li>
+      </ul>
+    </div>
+
     <p class="price">200 ج.م فقط</p>
+
     <div class="whatsapp">
       <a href="https://wa.me/201225329629" target="_blank">تواصل معنا عبر واتساب</a>
     </div>
